--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,7 @@
 Francesco Lombardi, Politecnico di Milano <francesco.lombardi@polimi.it>
-Sergio Balderrama, Université de Liège <slbalderrama@doct.ulg.ac.be>
-Sylvain Quoilin, KU Leuven <sylvain.quoilin@kuleuven.be>
-Emanuela Colombo, Politecnico di Milano <emanuela.colombo@polimi.it>
+Matteo Vincenzo Rocco, Politecnico di Milano <matteovincenzo.rocco@polimi.it>
+Simone Locatelli,  Politecnico di Milano 
+Chiara Magni,  Politecnico di Milano
+Emanuela Colombo, Politecnico di Milano
+Lorenzo Belussi, Construction Technologies Institute - National Research Council of Italy (ITC-CNR)
+Ludovico Danza, Construction Technologies Institute - National Research Council of Italy (ITC-CNR)
